tests/blob/immutables.sy
A :: blob {
    a: int,
}

start :: fn {
    a :: A { a: 1 }
    a._id = 1
    a._name = "abc"
}

// error: $Mutability
// error: $Mutability
